--- a/hackerDataCenterApp/src/index.css
+++ b/hackerDataCenterApp/src/index.css
@@ -19,8 +19,12 @@
   grid-area: 1 / 4 / 2 / 5; 
 }
 
-.quoteJokeFact { 
-  grid-area: 4 / 4 / 5 / 5; 
+.quoteJokeFact {
+  grid-area: 4 / 4 / 5 / 5;
+}
+
+.quoteJokeFactWrapper.expanded {
+  grid-area: 1 / 1 / 5 / 5;
 }
 
 .orderPizza { 
