--- a/hackerDataCenterApp/src/index.css
+++ b/hackerDataCenterApp/src/index.css
@@ -5,6 +5,8 @@
   grid-template-rows: 1fr 1fr 1fr 1fr;
   gap: 2px 2px;
   grid-auto-flow: row;
+  height: 100vh;
+  width: 100vw;
 }
 
 .news { 
@@ -21,6 +23,9 @@
 
 .quoteJokeFact {
   grid-area: 4 / 4 / 5 / 5;
+  min-width: 0;
+  min-height: 0;
+  overflow: auto;
 }
 
 .quoteJokeFactWrapper.expanded {
