--- a/hackerDataCenterApp/src/components/wetter.module.css
+++ b/hackerDataCenterApp/src/components/wetter.module.css
@@ -1,17 +1,24 @@
 .wetterSection {
     font-family: 'Arial', sans-serif;
-    font-size: 1.1.rem;
+    font-size: 1rem;
     min-width: 10rem;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     background-color: aliceblue;
+    height: 100%;
+}
+
+.h1 {
+    font-size: 1.2rem;
+    padding-top: 0.7rem;
+    margin-bottom: 0.2rem;
 }
   
-form {
+.form {
     display: flex;
-    margin: auto;
+    margin: 0.9rem auto;
+    padding: 0 1rem;
 }
   
 input {
@@ -29,18 +36,21 @@ button {
     cursor: pointer;
 }
 
-/* form, .temp, .weather{
-    width: 90%;
-} */
-  
 .temp, .weather {
     display: flex;
     justify-content: space-between;
-    margin-top: 20px;
+    margin: 0.9rem 0;
 }
 
 .temp p, .weather p {
-    font-weight: bold;
     display: inline;
-    width: 6rem;
+    width: 8rem;
+}
+
+.weather p {
+    padding: 1.8rem;
+}
+
+.weather img {
+    width: 5rem;
 }
