--- a/hackerDataCenterApp/src/components/chatBot.css
+++ b/hackerDataCenterApp/src/components/chatBot.css
@@ -35,8 +35,10 @@
   flex-grow: 1;
   margin-right: 10px;
   padding: 5px;
+  border: 1px solid red !important;
 }
 
 .ChatBot form button {
   padding: 5px 10px;
+  border: 1px solid blue;
 }
