--- a/hackerDataCenterApp/src/App.css
+++ b/hackerDataCenterApp/src/App.css
@@ -16,9 +16,11 @@ object-fit: cover;
     top: 15vh;
     background-color: red;
     z-index: 2;
-    
+    overflow: auto;
+    text-align: center;
     
 }
+
 .close {
     position: absolute;
     right: 0.3rem;
@@ -33,7 +35,7 @@ object-fit: cover;
     position: absolute;
     background-color: #24262899;
 }
-.placeHolder-Button {
-    height: 100%;
-    width: 100%;
+.news {
+width: 100%;
+height: 100%;
 }
