--- a/hackerDataCenterApp/src/components/stockMarketComponents/styles.scss
+++ b/hackerDataCenterApp/src/components/stockMarketComponents/styles.scss
@@ -12,7 +12,7 @@ input[type="text"] {
   -o-appearance: none;
   appearance: none;
   border: none;
-  outline: 1px solid blue !important;
+  outline: 1px solid blue;
   display: block;
   width: 50%;
   border-radius: 0%;
