--- a/hackerDataCenterApp/src/components/wetterModal.module.css
+++ b/hackerDataCenterApp/src/components/wetterModal.module.css
@@ -1,26 +1,34 @@
 .wetterSection {
     font-family: 'Arial', sans-serif;
-    font-size: 1.1.rem;
+    font-size: 1rem;
     min-width: 10rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: aliceblue;
+    height: 100%;
+}
+
+.h1 {
+    font-size: 1.6rem;
+    padding-top: 0.7rem;
+    margin: 2rem;
 }
   
-form {
+.form {
     display: flex;
-    margin: auto;
+    margin: 0.9rem auto;
+    padding: 0 1rem;
 }
   
-input {
+.input {
     padding: 8px;
     border: 2px solid lightgrey;
     border-radius: 25px 0px 0px 25px;
 }
   
-button {
+.button {
     padding: 8px 16px;
     background-color: #3abce3;
     color: white;
@@ -29,18 +37,25 @@ button {
     cursor: pointer;
 }
 
-/* form, .temp, .weather{
-    width: 90%;
-} */
-  
-.temp, .weather {
+.temp, .temp2, .weather, .data {
     display: flex;
     justify-content: space-between;
-    margin-top: 20px;
+    margin: 2rem 0;
 }
 
-.temp p, .weather p {
-    font-weight: bold;
+.weather p{
     display: inline;
-    width: 6rem;
+    width: 18rem;
+}
+
+.weather {
+
+}
+
+.weather p {
+    padding: 1.8rem;
+}
+
+.weather img {
+    width: 5rem;
 }
